--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -77,11 +77,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-12">
-            <p class="text-white">
+            <p class="footer-items">
+              <a href="/" class="footer-item">Home</a>
               <a href="/about" class="footer-item">About</a>
               <a href="/about/#contact_us" class="footer-item">Contact Us</a>
             </p>
             <p class="footer-title">Encompass Interviews</p>
+            <p class="copyright">&copy; <script>new Date().getFullYear()>document.write(new Date().getFullYear());</script></p>
           </div>
         </div>
       </div>
