--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -7,15 +7,15 @@
 
 {% block content %}
 <div class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 order-md-12">
+      <div class="container main-container">
+        <div class="row mission-section">
+          <div class="col-md-12">
             <h2 class="mission-header">Our Mission</h2>
             <p class="mission-body">Maximize the alignment of developers’ skills and opportunities</p>
           </div>
         </div>
         <hr>
-        <div class="row">
+        <div class="row about-section">
           <div class="col-md-8">
             <h2 class="section-header">About Us</h2>
             <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way 
@@ -30,7 +30,7 @@
           </div>
         </div>
         <hr>
-        <div class="row">
+        <div class="row team-section">
           <div class="col-md-12">
             <h2 class="section-header">The Team</h2><br/>
           </div>
@@ -41,9 +41,9 @@
           </div>
         </div>
         <hr />
-        <div class="row">
+        <div class="row contact-section">
           <div class="col-md-12">
-            <h2 class="section-header centered" id="contact_us">Contact Us</h2>
+            <h2 class="section-header centered" id="contact_us">Contact Us</h2><br/>
             <p class="contact-body">You can email us at <a href = "mailto: support@encompassinterviews.com">support@encompassinterviews.com</a>
             </p>
           </div>
