--- a/frontend_templates/interview_q/submissions.html
+++ b/frontend_templates/interview_q/submissions.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12">
              {% if user.is_authenticated %}
                 <div class="row">
-                    <h1 class="page-title">Submissions For {{ question.name }}:</h1>
+                    <h1 class="page-title">Submissions For {{ question.name }}</h1>
                 </div>
                 <div class="row">
                     <table class="table table-striped">
@@ -18,6 +18,7 @@
                             <tr>
                             <th scope="col">#</th>
                             <th scope="col">Interviewee Name</th>
+                            <th scope="col">Interviewee Email</th>
                             <th scope="col">Time Submitted (UTC)</th>
                             <th scope="col">Submission Link</th>
                             </tr>
@@ -27,12 +28,38 @@
                                 <tr>
                                 <th scope="row">{{forloop.counter}}</th>
                                 <th scope="row">{{submission.user.first_name}} {{submission.user.last_name}}</th>
+                                <th scope="row">{{submission.user.email}}</th>
                                 <td>{{ submission.submission_time }} (utc)</td>
                                 <td><a href="/results/submissions/{{submission.pk}}">Submission</a></td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>
+                    <div class="pages">
+                        {% if submissions.has_other_pages %}
+                        <nav>
+                            <ul class="pagination">
+                                {% if submissions.has_previous %}
+                                    <li class="page-item"><a class="page-link" href="?page={{ submissions.previous_page_number }}">&laquo;</a></li>
+                                {% else %}
+                                    <li class="page-item"><span  class="page-link" >&laquo;</span></li>
+                                {% endif %}
+                                {% for i in submissions.paginator.page_range %}
+                                {% if submissions.number == i %}
+                                    <li class="page-item active"><span  class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                                {% else %}
+                                    <li class="page-item"> <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                {% endif %}
+                                {% endfor %}
+                                {% if submissions.has_next %}
+                                    <li class="page-item"><a class="page-link"  href="?page={{ submissions.next_page_number }}">&raquo;</a></li>
+                                {% else %}
+                                        <li class="disabled"><span  class="page-link" >&raquo;</span></li>
+                                {% endif %}
+                            </ul>
+                        </nav>
+                        {% endif %}
+                    </div>
                 </div>
             {% else %}
                 {% include "no_auth.html" %}
