add update about security

--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -138,7 +138,7 @@ def tell_them_what_encompass_is_all_about():
   code bases and have the interviewer interact with them 
   when answering questions. Have the interviewee fill out as many
   stub files like this as you would like. 
-  Customize the question to your liking.
+  Customize the question to your liking. We offer the ability to ban imports, suppress standard output, and disable network access to keep your code base safe and secure during the whole question answering process.
   '''
 
   message = your_code_library.yourMethod(description)
