--- a/frontend_templates/is_interviewee_account.html
+++ b/frontend_templates/is_interviewee_account.html
@@ -1,5 +1,5 @@
 <div style="color: white; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-<h1 style="font-size: 3em;">Your account does not support creating or managing questions.</h1><br />
+<h1 style="font-size: 3em;text-align: center;">Your account does not support creating or managing questions.</h1><br />
 <center><a style="color: white; font-size: 1.7em" href="/users/account">Change account here</a></center>
 </div>
 <script>
