--- a/frontend_templates/interview_q/delete.html
+++ b/frontend_templates/interview_q/delete.html
@@ -1,23 +1,21 @@
 {% extends "base.html" %}
 {% load static %}
 {% block css_imports %}
-<link href="{% static 'interview/all_created_questions.css' %}" rel="stylesheet">
+<link href="{% static 'interview/delete.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<div class="container" style="padding-top: 70px; max-width: 90vw;">
+<div class="container page-container">
     <div class="row">
         <div class="col-sm-12">
              {% if user.is_authenticated %}
                  <form method="post">
                         {% csrf_token %}
-                        <div style="color: #6c5ce7; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-                        <h1>Are you sure you want to delete: {{ question.name }} ?</h1><br />
+                        <div class="main-section">
+                        <h1 class="title">Are you sure you want to delete: {{ question.name }} ?</h1><br />
                         <center><button class="btn btn-danger btn-lg">Yes, Delete</button></center>
                     </div>
                 </form>
-             
-
             {% else %}
                 {% include "no_auth.html" %}
             {% endif %} 
