--- a/frontend_templates/interview_q/submissions.html
+++ b/frontend_templates/interview_q/submissions.html
@@ -27,8 +27,8 @@
                             {% for submission in submissions %}
                                 <tr>
                                 <th scope="row">{{forloop.counter}}</th>
-                                <th scope="row">{{submission.user.first_name}} {{submission.user.last_name}}</th>
-                                <th scope="row">{{submission.user.email}}</th>
+                                <td>{{submission.user.first_name}} {{submission.user.last_name}}</td>
+                                <td>{{submission.user.email}}</td>
                                 <td>{{ submission.submission_time }} (utc)</td>
                                 <td><a href="/results/submissions/{{submission.pk}}">Submission</a></td>
                                 </tr>
