--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -13,8 +13,12 @@
     {% csrf_token %}
       <div class="col-md-12 time-section">
           {% if is_observer %}
-          <div class="alert alert-info" role="alert">
+          <div class="alert alert-primary" role="alert">
             You are observing this question
+          </div>
+          {% else %}
+          <div class="alert alert-primary" role="alert" id="being_observed" style="display: none">
+            You are being observed
           </div>
           {% endif %}
         <p class="instructions"><span class="question-title">{{ question.base_question.name }}:</span> Please modify the stub files or upload a zip file and press the Submit Code button when finished.</p>
@@ -39,6 +43,7 @@
             <span id="remaining_time">Remaining Time:</span> 
           {% endif %}
         {% endif %}
+        <p class="theme-name">Theme: <select id="theme-site" class="select-css" onchange="onSelectNewThemeSite()"> </select></p>
       </div>
       <div class="col-md-6 answer-section-one" id="content-one">
         <div class="col-md-6 editor-section">
@@ -103,7 +108,6 @@
                     </optgroup>
                   {% endfor %}
               </select>
-              <p class="theme-name">Theme: </p><select id="theme-site" class="select-css" onchange="onSelectNewThemeSite()"> </select>
             </div>
           </div>
         </div>
@@ -217,6 +221,7 @@ var interviewSocket = new WebSocket(
 
 var last_sent = "";
 var last_received = "";
+var time_last_action = new Date().getTime();
 
 function initSetUpStarterFiles() {
     var starter_index = 0;
@@ -265,15 +270,17 @@ initAPISetup();
 function send_socket_file_content_update(filename, content, is_test_body, is_test_results) {
   if (interviewSocket.readyState !== WebSocket.CONNECTING) {
       if (content !== last_sent && content !== last_received) {
-          if (new Date().getTime() - start_millis > 3000) {
-            interviewSocket.send(JSON.stringify({
-                    'file': filename,
-                    'content': content,
-                    'is_test_body': is_test_body,
-                    'is_test_results': is_test_results
-            }));
-            last_sent = content;
-        }
+            var time_now = new Date().getTime();
+            if (time_now - start_millis > 3000 && time_now - time_last_action > 100) {
+                time_last_action = new Date().getTime();
+                interviewSocket.send(JSON.stringify({
+                        'file': filename,
+                        'content': content,
+                        'is_test_body': is_test_body,
+                        'is_test_results': is_test_results
+                }));
+                last_sent = content;
+            }
       }
   }
 };
@@ -632,6 +639,7 @@ $('#walk_through').on('click', function() {
 interviewSocket.onmessage = function(e) {
   var data = JSON.parse(e.data);
   var new_content = data['content'];
+  time_last_action = new Date().getTime();
   var file = data['file'];
   var is_test_body = data['is_test_body'];
   var is_test_results = data['is_test_results'];
@@ -683,6 +691,9 @@ interviewSocket.onmessage = function(e) {
         name_to_body[file] = new_content;
         }
     }
+  }
+  if( $('#being_observed').length ) {
+    $("#being_observed").show();
   }
 };
 
